# googletest-examples

./: CMakeLists.txt
inc/: singleton.hpp  singleton_user.hpp
src/: CMakeLists.txt  main.cpp  singleton.cpp
tests/: CMakeLists.txt
tests/src/: test_singleton_user.cpp
tests/src/mocks/: singleton.hpp
